# project-creator

./: .gitignore  CHANGELOG.md  DEVLOG.md  LICENSE  Project Creator.spec  README.md  main.py  requirements.txt  start.bat
.github/: FUNDING.yml  pull_request_template.md
.github/scripts/: check_pr_rules.py
.github/workflows/: pages.yml  pr-rules.yml  pypi-publish.yml
CLI/: README.md  main.py  package.json  pyproject.toml
CLI/prj_creator/: main.py
CLI/prj_creator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
GUI Version (Discontinued)/: main.py
Testing/: main.py
docs/: Documentation.md  contributing.md  index.html
src/: README.md  pyproject.toml
src/prj_creator/: main.py
src/prj_creator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: README.md
templates/basic-web/: README.md  index.html  script.js  style.css
templates/npm-package/: README.md  package.json
templates/npm-package/src/: index.js
templates/python-pypi/: README.md  pyproject.toml
templates/python-pypi/src/your_package_name/: __init__.py  main.py
templates/python-pypi/tests/: test_basic.py
website/: index.html  terminal.css  terminal.js
website/contributing/: index.html
website/docs/: index.html
website/documentation/: index.html
