[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prj-creator"
version = "2.0.0"
description = "A CLI tool for rapid project scaffolding"
readme = "README.md"
authors = [{ name = "DevX-Dragon" }]
dependencies = [] # Add any external deps like 'requests' if needed

[project.urls]
Homepage = "https://github.com/DevX-Dragon/project-creator"

[project.scripts]
prj-creator = "prj_creator.main:run_wizard"