[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prj-creator"
version = "2.1.3"
description = "A CLI tool for rapid project scaffolding"
readme = "README.md"
authors = [{ name = "DevX-Dragon" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/DevX-Dragon/project-creator"

[project.scripts]
prj-creator = "prj_creator.main:run_wizard"