[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prj-creator"
version = "3.0.1"
description = "A CLI tool for rapid project scaffolding"
readme = "README.md"
authors = [{ name = "DevX-Dragon" }]
dependencies = [
        "requests",
        "InquirerPy",
        "colorama",
        "rich",
        "GitPython",
]

[project.urls]
Homepage = "https://github.com/DevX-Dragon/project-creator"

[project.scripts]
prj-creator = "prj_creator.main:run_wizard"