[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "A starter Python package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
your-package-name = "your_package_name.main:main"
